fix: article-info hover z-index

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -199,7 +199,7 @@ table {
 
 #order-footer, .article-info {
   text-align: left;
-  z-index: 1;
+  z-index: 3;
   position: fixed;
   bottom: 0;
   background-color: #E4EED6;
@@ -245,7 +245,7 @@ table {
 }
 
 .article-info {
-  z-index: 2;
+  z-index: 4;
   width: 40em;
   height: 8em;
   border: none;
